--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -32,72 +32,77 @@
                                                 <div class="wrapper">
                                                     <div class="mega-content">
                                                         <div class="dotgrid">
-                                                            <div class="wrapper">
-                                                                <div class="item">
-                                                                    <div class="dot-image">
-                                                                        <a href="" class="product-permalink"></a>
-                                                                        <div class="thumbnail">
-                                                                            <img src="./images/product_01.jpg" alt="">
-                                                                        </div>
-                                                                        <div class="thumbnail hover">
-                                                                            <img src="./images/product_01b.jpg" alt="">
-                                                                        </div>
-                                                                        <div class="actions">
-                                                                            <ul>
-                                                                                <li><a href=""><i
-                                                                                            class="ri-star-line"></i></a>
-                                                                                </li>
-                                                                                <li><a href=""><i
-                                                                                            class="ri-arrow-left-right-line"></i></a>
-                                                                                </li>
-                                                                                <li><a href=""><i
-                                                                                            class="ri-eye-line"></i></a>
-                                                                                </li>
-                                                                            </ul>
-                                                                        </div>
-                                                                        <div class="label"><span>-25%</span></div>
-                                                                    </div>
-                                                                    <div class="dot-info">
-                                                                        <h2 class="dot-title"><a href="">The Sneaker
-                                                                                in VietNam</a></h2>
-                                                                        <div class="product-price">
-                                                                            <span class="before">$80.00</span>
-                                                                            <span class="current">$52.00</span>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="item">
-                                                                    <div class="dot-image">
-                                                                        <a href="" class="product-permalink"></a>
-                                                                        <div class="thumbnail">
-                                                                            <img src="./images/product_02.jpg" alt="">
-                                                                        </div>
-                                                                        <div class="thumbnail hover">
-                                                                            <img src="./images/product_02b.jpg" alt="">
-                                                                        </div>
-                                                                        <div class="actions">
-                                                                            <ul>
-                                                                                <li><a href=""><i
-                                                                                            class="ri-star-line"></i></a>
-                                                                                </li>
-                                                                                <li><a href=""><i
-                                                                                            class="ri-arrow-left-right-line"></i></a>
-                                                                                </li>
-                                                                                <li><a href=""><i
-                                                                                            class="ri-eye-line"></i></a>
-                                                                                </li>
-                                                                            </ul>
-                                                                        </div>
-                                                                        <div class="label"><span>-25%</span></div>
-                                                                    </div>
-                                                                    <div class="dot-info">
-                                                                        <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">The Sneaker
-                                                                                    in VietNam</a></h2>
-                                                                            <div class="product-price">
-                                                                                <span class="before">$80.00</span>
-                                                                                <span class="current">$52.00</span>
+                                                                <div class="wrapper">
+                                                                    <div class="item">
+                                                                        <div class="dot-image">
+                                                                            <a href="" class="product-permalink"></a>
+                                                                            <div class="thumbnail">
+                                                                                <img src="./images/product_01.jpg"
+                                                                                    alt="">
                                                                             </div>
+                                                                            <div class="thumbnail hover">
+                                                                                <img src="./images/product_01b.jpg"
+                                                                                    alt="">
+                                                                            </div>
+                                                                            <div class="actions">
+                                                                                <ul>
+                                                                                    <li><a href=""><i
+                                                                                                class="ri-star-line"></i></a>
+                                                                                    </li>
+                                                                                    <li><a href=""><i
+                                                                                                class="ri-arrow-left-right-line"></i></a>
+                                                                                    </li>
+                                                                                    <li><a href=""><i
+                                                                                                class="ri-eye-line"></i></a>
+                                                                                    </li>
+                                                                                </ul>
+                                                                            </div>
+                                                                            <div class="label"><span>-25%</span></div>
+                                                                        </div>
+                                                                        <div class="dot-info">
+                                                                            <h2 class="dot-title"><a href="">The Shoes
+                                                                                    in VietNam</a></h2>
+                                                                            <div class="product-price"></div>
+                                                                            <span class="before">$80</span>
+                                                                            <span class="before"></span>
+                                                                            <span class="before"></span>
+
+
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="item">
+                                                                        <div class="dot-image">
+                                                                            <a href="" class="product-permalink"></a>
+                                                                            <div class="thumbnail">
+                                                                                <img src="./images/product_02.jpg"
+                                                                                    alt="">
+                                                                            </div>
+                                                                            <div class="thumbnail hover">
+                                                                                <img src="./images/product_02b.jpg"
+                                                                                    alt="">
+                                                                            </div>
+                                                                            <div class="actions">
+                                                                                <ul>
+                                                                                    <li><a href=""><i
+                                                                                                class="ri-star-line"></i></a>
+                                                                                    </li>
+                                                                                    <li><a href=""><i
+                                                                                                class="ri-arrow-left-right-line"></i></a>
+                                                                                    </li>
+                                                                                    <li><a href=""><i
+                                                                                                class="ri-eye-line"></i></a>
+                                                                                    </li>
+                                                                                </ul>
+                                                                            </div>
+                                                                            <div class="label"><span>-25%</span></div>
+                                                                        </div>
+                                                                        <div class="dot-info">
+                                                                            <h2 class="dot-title"><a href="">The Sweater
+                                                                                    in Tosca</a></h2>
+                                                                            <div class="product-price"></div>
+                                                                            <span class="before">$80</span>
+                                                                            <span class="before"></span>
+                                                                            <span class="before"></span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="item">
@@ -127,12 +132,14 @@
                                                                             <div class="label"><span>-25%</span></div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">The Sneaker
-                                                                                    in VietNam</a></h2>
-                                                                            <div class="product-price">
-                                                                                <span class="before">$80.00</span>
-                                                                                <span class="current">$52.00</span>
-                                                                            </div>
+                                                                            <h2 class="dot-title"><a href="">The Sweater
+                                                                                    in Tosca</a></h2>
+                                                                            <div class="product-price"></div>
+                                                                            <span class="before">$80</span>
+                                                                            <span class="before"></span>
+                                                                            <span class="before"></span>
+
+
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -169,7 +176,6 @@
                                                                     </ul>
                                                                 </div>
                                                             </div>
-                                                        </div>
                                                     </div>
                                                 </div>
                                         </li>
