--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,8 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="./javascripts/script.js"/>
+    <title>Shopping</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -15,14 +14,6 @@
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="stylesheet" href="./stylesheets/swiper-bundle.min.css">
     <link rel="stylesheet" href="./javascripts/swiper-bundle.min.js">
-    <link rel="stylesheet" href="./stylesheets/product.css">
-    <link rel="stylesheet" href="./javascripts/script.js">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap">
-    <link href="https://fonts.cdnfonts.com/css/prata-2">
-    <link rel="stylesheet" href="./stylesheets/product.css">
 </head>
 
 <body>
