--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping</title>
+    <title>Home Page</title>
+    <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -14,17 +15,7 @@
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="stylesheet" href="./stylesheets/swiper-bundle.min.css">
     <link rel="stylesheet" href="./javascripts/swiper-bundle.min.js">
-    <link rel="javascripts" href="./javascripts/script.js">
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
-    <style type="stylesheets">
-        @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);
-    </style>
-    <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css);</style>
-    <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);</style>
-    <style>
-        @import url(/stylesheets/product.css);
-    </style>
+    <link rel="stylesheet" href="./stylesheets/product.css">
 </head>
 
 <body>
