--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -1,15 +1,14 @@
-<link rel="javascripts" href="./javascripts/script.js">
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
 <style type="stylesheets">
     @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);
-    </style>
+</style>
 <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css);</style>
 <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);</style>
 <style>
     @import url(/stylesheets/product.css);
 </style>
-<script src="./javascripts/script.js"></script>
+<script src="/javascripts/script.js"></script>
 
 <div id="page" class="page-single">
     <header>
