--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -62,12 +62,10 @@
                                                                         <div class="dot-info">
                                                                             <h2 class="dot-title"><a href="">The Shoes
                                                                                     in VietNam</a></h2>
-                                                                            <div class="product-price"></div>
-                                                                            <span class="before">$80</span>
+                                                                            <div class="product-price">
+                                                                                <span class="before">$80</span>
                                                                             <span class="before"></span>
-                                                                            <span class="before"></span>
-
-
+                                                                            </div>                                                                          
                                                                         </div>
                                                                     </div>
                                                                     <div class="item">
