--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -240,7 +240,7 @@
                             <div class="title-info">
                                 <div class="container wide">
                                     <div class="wrap">
-                                        <span class="price">{{this.price}}</span>
+                                        <span class="price">${{this.price}}</span>
                                         <h3 class="title">{{this.name}}</h3>
                                         <div class="button"><a href="/product/detail/{{this._id}}" class="primary-btn">Shop Now</a></div>
                                     </div>
@@ -320,8 +320,8 @@
                                     <div class="dot-info">
                                         <h2 class="dot-title"><a href="">{{this.name}}</a></h2>
                                         <div class="product-price">
-                                            <span class="before">{{this.price}}</span>
-                                            <span class="current">{{this.price}}</span>
+                                            <span class="before">${{this.price}}</span>
+                                            <span class="current">${{this.discount}}</span>
                                         </div>
                                     </div>
                                 </div>
