--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -10,6 +10,7 @@
 </style>
 <script src="/javascripts/script.js"></script>
 <script type="javasripts" src="./javascripts/script.js"></script>
+<script src="../script.js" type="text/javascript"></script>
 
 <div id="page" class="page-single">
     <header>
