--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -390,8 +390,8 @@
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a href="">{{this.name}}</a></h2>
                                             <div class="product-price">
-                                                <span class="before">{{this.price}}</span>
-                                                <span class="current">{{this.price}}</span>
+                                                <span class="before">${{this.price}}</span>
+                                                <span class="current">${{this.discount}}</span>
                                             </div>
                                         </div>
                                     </div>
@@ -533,7 +533,7 @@
                                 </div>
                             </div>
                             <div class="dotgrid scrollto">
-                                <div class="wrapper">
+                                {{!-- <div class="wrapper">
                                     <!--5 lần-->
                                     {{#each productList}}
                                     <div class="item">
@@ -548,7 +548,67 @@
                                         </div>
                                     </div>
                                     {{/each}}
-                                </div>
+                                </div> --}}
+                                <div class="wrapper">
+                                        <div class="item">
+                                            <div class="dot-image">
+                                                <a href=""></a>
+                                                <div class="thumbnail">
+                                                    <img src="./images/ig_01.jpg" alt="">
+                                                </div>
+                                                <div class="actions">
+                                                    <a href="https://www.instagram.com/p/CzEUaG_rvXM/?img_index=1">
+                                                    <i class="ri-instagram-line"></i>
+                                                    </a>
+                                                    
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="dot-image">
+                                                <a href=""></a>
+                                                <div class="thumbnail">
+                                                    <img src="./images/ig_05.jpg" alt="">
+                                                </div>
+                                                <div class="actions">
+                                                    <i class="ri-instagram-line"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="dot-image">
+                                                <a href=""></a>
+                                                <div class="thumbnail">
+                                                    <img src="./images/ig_02.jpg" alt="">
+                                                </div>
+                                                <div class="actions">
+                                                    <i class="ri-instagram-line"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="dot-image">
+                                                <a href=""></a>
+                                                <div class="thumbnail">
+                                                    <img src="./images/ig_04.jpg" alt="">
+                                                </div>
+                                                <div class="actions">
+                                                    <i class="ri-instagram-line"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="dot-image">
+                                                <a href=""></a>
+                                                <div class="thumbnail">
+                                                    <img src="./images/ig_03.jpg" alt="">
+                                                </div>
+                                                <div class="actions">
+                                                    <i class="ri-instagram-line"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                             </div>
                         </div>
                     </div>
