--- a/public/stylesheets/product.css
+++ b/public/stylesheets/product.css
@@ -1002,6 +1002,7 @@ main>div .heading {
 .bycats .heading {
     display: flex;
     justify-content: center;
+    padding-top: 15px;
 }
 
 .bycats .heading>span {
