--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1010,6 +1010,7 @@ main>div .heading {
 .bycats .heading {
   display: flex;
   justify-content: center;
+  padding-top: 15px;
 }
 
 .bycats .heading>span {
