--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -50,7 +50,7 @@
                                                                         <div class="dot-image">
                                                                             <a href="" class="product-permalink"></a>
                                                                             <div class="thumbnail">
-                                                                                <img src="{{product.gallery}}" alt="">
+                                                                                <img src="./images/product_01.jpg" alt="">
                                                                             </div>
                                                                             <div class="thumbnail hover">
                                                                                 <img src="{{product.gallery}}" alt="">
@@ -72,15 +72,11 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">The
-                                                                                    Shoes
-                                                                                    in VietNam</a></h2>
-                                                                            <div class="product-price"></div>
-                                                                            <span class="before">$80</span>
-                                                                            <span class="before"></span>
-                                                                            <span class="before"></span>
-
-
+                                                                            <h2 class="dot-title"><a href="">{{product.name}}</a></h2>
+                                                                            <div class="product-price">
+                                                                                <span class="before">${{product.price}}</span>
+                                                                                <span class="current">${{product.discount}}</span>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                     <div class="item">
@@ -109,13 +105,11 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">The
-                                                                                    Sweater
-                                                                                    in Tosca</a></h2>
-                                                                            <div class="product-price"></div>
-                                                                            <span class="before">$80</span>
-                                                                            <span class="before"></span>
-                                                                            <span class="before"></span>
+                                                                            <h2 class="dot-title"><a href="">{{product.name}}</a></h2>
+                                                                            <div class="product-price">
+                                                                                <span class="before">${{product.price}}</span>
+                                                                                <span class="current">${{product.discount}}</span>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                     <div class="item">
@@ -144,15 +138,11 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">The
-                                                                                    Sweater
-                                                                                    in Tosca</a></h2>
-                                                                            <div class="product-price"></div>
-                                                                            <span class="before">$80</span>
-                                                                            <span class="before"></span>
-                                                                            <span class="before"></span>
-
-
+                                                                           <h2 class="dot-title"><a href="">{{product.name}}</a></h2>
+                                                                            <div class="product-price">
+                                                                                <span class="before">${{product.price}}</span>
+                                                                                <span class="current">${{product.discount}}</span>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                 </div>
