--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,7 +20,7 @@
 
 <body>
   {{{body}}}
-    <script src="/javascripts/script.js"></script>
+    <script src="./javascripts/script.js"></script>
 </body>
 
 </html>
