--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -300,10 +300,10 @@
                                     <div class="dot-image">
                                         <a href="/product/detail/{{this._id}}" class="product-permalink"></a>
                                         <div class="thumbnail">
-                                            <img src="{{this.gallery_1}}" alt="">
+                                            <img src="{{this.gallery}}" alt="">
                                         </div>
                                         <div class="thumbnail hover">
-                                            <img src="{{this.gallery_2}}" alt="">
+                                            <img src="{{this.thumbnail}}" alt="">
                                         </div>
                                         <div class="actions">
                                             <ul>
@@ -373,7 +373,7 @@
                                                 <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="thumbnail hover">
-                                                <img src="{{this.gallery}}" alt="">
+                                                <img src="{{this.thumbnail}}" alt="">
                                             </div>
                                             <div class="actions">
                                                 <ul>
