--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -53,7 +53,7 @@
                                                                                 <img src="{{product.gallery}}" alt="">
                                                                             </div>
                                                                             <div class="thumbnail hover">
-                                                                                <img src="{{product.gallery}}" alt="">
+                                                                                <img src="{{product.thumbnail}}" alt="">
                                                                             </div>
                                                                             <div class="actions">
                                                                                 <ul>
@@ -86,7 +86,7 @@
                                                                                 <img src="{{product.gallery}}" alt="">
                                                                             </div>
                                                                             <div class="thumbnail hover">
-                                                                                <img src="{{product.gallery}}" alt="">
+                                                                                <img src="{{product.thumbnail}}" alt="">
                                                                             </div>
                                                                             <div class="actions">
                                                                                 <ul>
@@ -119,7 +119,7 @@
                                                                                 <img src="{{product.gallery}}" alt="">
                                                                             </div>
                                                                             <div class="thumbnail hover">
-                                                                                <img src="{{product.gallery}}" alt="">
+                                                                                <img src="{{product.thumbnail}}" alt="">
                                                                             </div>
                                                                             <div class="actions">
                                                                                 <ul>
