--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -12,6 +12,12 @@
 <style>@import url(/javascripts/script.js);</style>
 <script src="./javascripts/swiper-bundle.min.js"></script>
 
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
 <div id="page" class="page-single">
     <header>
         <div class="inner-header">
@@ -253,15 +259,7 @@
                                         <div class="wrap swiper-wrapper">
                                             <div class="item swiper-slide"><img src="{{product.gallery}}" alt="">
                                             </div>
-                                            <div class="item swiper-slide"><img src="{{product.gallery}}" alt="">
-                                            </div>
-                                            <div class="item swiper-slide"><img src="{{product.gallery}}" alt="">
-                                            </div>
-                                            <div class="item swiper-slide"><img src="{{product.gallery}}" alt="">
-                                            </div>
-                                            <div class="item swiper-slide"><img src="{{product.gallery}}" alt="">
-                                            </div>
-                                            <div class="item swiper-slide"><img src="{{product.gallery}}" alt="">
+                                            <div class="item swiper-slide"><img src="{{product.thumbnail}}" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -277,23 +275,7 @@
                                                 </div>
                                             </div>
                                             <div class="item swiper-slide">
-                                                <div class="thumb-wrap"><img src="{{product.gallery}}" alt="">
-                                                </div>
-                                            </div>
-                                            <div class="item swiper-slide">
-                                                <div class="thumb-wrap"><img src="{{product.gallery}}" alt="">
-                                                </div>
-                                            </div>
-                                            <div class="item swiper-slide">
-                                                <div class="thumb-wrap"><img src="{{product.gallery}}" alt="">
-                                                </div>
-                                            </div>
-                                            <div class="item swiper-slide">
-                                                <div class="thumb-wrap"><img src="{{product.gallery}}" alt="">
-                                                </div>
-                                            </div>
-                                            <div class="item swiper-slide">
-                                                <div class="thumb-wrap"><img src="{{product.gallery}}" alt="">
+                                                <div class="thumb-wrap"><img src="{{product.thumbnail}}" alt="">
                                                 </div>
                                             </div>
                                         </div>
