--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -1,22 +1,11 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
-<style type="stylesheets">
-    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);
-</style>
+<style type="stylesheets">@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);</style>
 <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css);</style>
 <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);</style>
-<style>
-    @import url(/stylesheets/product.css);
-</style>
-<script src="./javascripts/script.js"></script>
-<style>@import url(/javascripts/script.js);</style>
-<script src="./javascripts/swiper-bundle.min.js"></script>
-
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<style>@import url(/stylesheets/product.css);</style>
+<script src="/javascripts/swiper-bundle.min.js"></script>
+<script type="module" src="/javascripts/script.js"></script>
 
 <div id="page" class="page-single">
     <header>
