--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -505,7 +505,7 @@
             </div>
         </div>
         <!--carousel-->
-        {{!-- <div class="carousel">
+        <div class="carousel">
             <div class="container">
                 <div class="wrap">
                     <div class="heading">
@@ -876,7 +876,7 @@
                     </div>
                 </div>
             </div>
-        </div> --}}
+        </div>
     </main>
     <footer>
         <div class="inner-footer">
